--- a/views/jobs/showjob.ejs
+++ b/views/jobs/showjob.ejs
@@ -1,27 +1,27 @@
 <% include ../partials/header %>
 <div class="container">
-    <a id="profiles-back-btn" class="btn btn-sm btn-default" href="/jobs">Back to Job List</a>
+    <a id="show-btn" class="btn btn-secondary btn-sm" href="/jobs">Back to jobs list</a>
     <div class="row">
         <div class="col-md-9">
             <h2>Dont you want to be the</h2>
             <h1 class="show-name"><%= jobs.jobRole %> @ <strong><%= jobs.jobVenueName %></strong>?</h1>
             <br>
-            <div class="thumbnail">
-                <div class="caption-full">
+            <div class="card">
+                <div class="card-text">
                     <strong><p>Job description</p></strong>
                     <p><%= jobs.jobDesc %></p>
                 </div>
-                <div class="caption-full">
+                <div class="card-text">
                     <strong><p>Start date</p></strong>
-                    <p>10/02/2018</p>
+                    <p><%= jobs.jobStartDate %></p>
                 </div>
-                <div class="caption-full">
+                <div class="card-text">
                     <strong><p>Interested? Contact</p></strong>
-                    <p>Liam on 040000000</p>
-                    <p>email: <a href="mailto:liam@mtphq.com">liam@mtphq.com</a></p>
+                    <p><%= jobs.jobContactName %> on <%= jobs.jobContactPhone %></p>
+                    <p>email: <a href="mailto:<%= jobs.jobContactEmail %>"><%= jobs.jobContactEmail %></a></p>
                 </div>     
                 <div>                                    
-                    <div class="caption-full">
+                    <div class="card-text">
                         <p>posted by <%= jobs.jobAuthor.username %> on <%= jobs.date %></p>
                     </div>
                 </div>
