--- a/views/jobs/joblist.ejs
+++ b/views/jobs/joblist.ejs
@@ -1,33 +1,50 @@
 <% include ../partials/header %>
 
-<div class="transbox">
-    <header id="jumbotron-jobs" class="jumbotron">
+<div class="container">
+    <header class="jumbotron jumbotron-2">
         <div class="container">
-            <h1 id="mtp-h1">MTP Job board</h1>
-            <h2>Add a job and find your future legends</h2>
-            <br>
-            <a class="btn btn-default btn-lg" href="/jobs/new">LIST A JOB ></a>
+            <h1 id="mtp-h1">Add a job listing</h1>
+            <p>Simply create a job ad free and find your future legends</p>
+            <a class="btn btn-secondary btn-lg" href="/jobs/new">LIST A JOB</a>
         </div>
     </header>
-</div> 
 
-<div class="container">
-    <div id="thumbnail-row" class="row text-center">
-        <% jobs.forEach(function(job){ %>
-            <div class="col-md-3 col-sm-6 col-xs-12">
-               <div class="thumbnail">
-                   <div class="caption">
-                        <h4 class="profile-name"><strong><%=job.jobVenueName%></strong></h4>
-                        <p>is looking for a</p>    
-                        <h4 class="profile-name"><%= job.jobRole %></h4>
-                   </div>
-                   <p>
-                       <a href="/jobs/<%= job._id %>" class="btn btn-xs btn-default">Learn More</a>
-                   </p>
-               </div>
-            </div>
-        <% }); %> 
+    <!-- SECTION 1 -->
+    <div class="jobs-section1">
+      <h2>MEET YOUR NEW CAREER</h2>
+      <h5>Find your next epic job at one these amazing employers below</h5>
     </div>
+
+    <!-- Listings -->
+    <!--<% jobs.forEach(function(job){ %>
+        <div class="card-columns">
+            <div class="card">
+                <h4 class="card-title"><strong><%=job.jobVenueName%></strong></h4>
+                <p class="card-text">is looking for a <strong><%= job.jobRole %></strong></p>    
+                <p>
+                    <a href="/jobs/<%= job._id %>" class="btn btn-outline-info">Learn More</a>
+                </p>
+            </div>
+        </div>
+    <% }); %> -->
+    
+    <table class="table table-hover">
+            <tr class="active">
+                <th >Business Name</th>
+                <th> </th>
+                <th >Vacant Role</th>
+                <th> </th>
+            </tr> 
+        <% jobs.forEach(function(job){ %>
+            <tr>
+                <th id="#mtp-h1"><%=job.jobVenueName%></th>
+                <th>is looking for a </th>
+                <th id="#mtp-h1"><strong><%= job.jobRole %></strong></th>
+                <th align="center"><a href="/jobs/<%= job._id %>" class="btn btn-outline-info">Learn More</a></th>
+            </tr>    
+        <% }); %> 
+    </table>
+    
 </div>
 
 <% include ../partials/footer %>
