--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -1,7 +1,8 @@
 <% include ../partials/header %>
 
 <div class="container">
-    <header class="jumbotron">
+    <div>
+     <header class="jumbotron col-xs-12">
         <div class="container">
             <h1 id="mtp-h1">Share your own story</h1>
             <p>Simply create your own MTP profile to share your unique story.</p>
@@ -27,7 +28,9 @@
                     </p>
             </div>
         </div>
-    <% }); %> 
+    <% }); %>    
+    </div>
+    
 </div>
 
 <% include ../partials/footer %>
