--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -32,8 +32,11 @@ th {
     font-size: 1.8em;
 }
 
-.table-header {
-    background-color: #F0F0F0;
+@media only screen and (max-width: 768px) {
+    /* For mobile phones: */
+    [class*="col-"] {
+        width: 100%;
+    }
 }
 
 .jumbotron {
