--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,6 +8,7 @@
       <link href="https://fonts.googleapis.com/css?family=Oswald|Roboto" rel="stylesheet">        
       <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
       <script src="https://use.fontawesome.com/75feccbb72.js"></script>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <nav class="navbar navbar-fixed-top navbar-toggleable-sm navbar-light bg-light">
