--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -109,14 +109,15 @@ th {
 
 .footer-section {
     background-color: #F0F0F0;
-    padding: 50px;
     padding-bottom: 100px;
-    padding-left: 100px;
     margin-top: 20px;
+    padding-top: 20px;
+    padding: 5px;
 }
 
 .footer-section ul {
     list-style: none;
+    display: inline;
 }
 
 .footer-section a {
