--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,11 @@
         <div class="footer-section">
-                <div class="col-3 col-m-12">
+                <div class=" container col-3 col-m-12">
                         <h4 id="mtp-h4">Follow MEETTHEPEOPLE</h4>
                         <ul>
-                            <li><a href="https://www.facebook.com/meetthepeople.co/"><i class="fa fa-facebook-square fa-2x social"></i>Facebook</a></li>
-                            <li><a href="https://www.instagram.com/meetthepeople.co/"><i class="fa fa-instagram fa-2x social"></i>Instagram</a></li>
-                            <li><a href="https://twitter.com/bl_waller/"><i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>Twitter</a></li>
-                            <li><a href="mailto:brittanyleewaller@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-2x social"></i>Email Us</a></li>
+                            <li><a href="https://www.facebook.com/meetthepeople.co/"><i class="fa fa-facebook-square fa-2x social"></i> Facebook</a></li>
+                            <li><a href="https://www.instagram.com/meetthepeople.co/"><i class="fa fa-instagram fa-2x social"></i> Instagram</a></li>
+                            <li><a href="https://twitter.com/bl_waller/"><i id="social-tw" class="fa fa-twitter-square fa-2x social"></i> Twitter</a></li>
+                            <li><a href="mailto:brittanyleewaller@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-2x social"></i> Email Us</a></li>
                         </ul>
                 </div>
         </div>
