show page update

--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -48,7 +48,7 @@
         <div class="col-md-9">
             <div class="well">
                         <div class="text-right">
-                                <a class="btn btn-mtp-black" href="/profiles/<%= profile._id %>/comments/new">Add a comment</a>
+                                <a class="btn btn-secondary btn-sm" href="/profiles/<%= profile._id %>/comments/new">Add a comment</a>
                         </div>
                         <hr>
                         <% profile.comments.forEach(function(comment){ %>
