--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -76,6 +76,7 @@ th {
 
 .card-title {
     text-transform: uppercase;
+    padding-top: 20px;
 }
 
 .card-text {
@@ -198,7 +199,7 @@ th {
     font-family: Oswald,sans-serif;
     text-transform: uppercase;
     color: #fff;
-    font-size: 2.5rem;
+    font-size: 1.5rem;
     font-weight: 500;
     line-height: 1.5em;
     margin: 12px 20px 12px;
