--- a/views/jobs/joblist.ejs
+++ b/views/jobs/joblist.ejs
@@ -5,7 +5,7 @@
         <div class="container">
             <h1 id="mtp-h1">Add a job listing</h1>
             <p>Simply create a job ad free and find your future legends</p>
-            <a class="btn btn-secondary btn-lg" href="/jobs/new">LIST A JOB</a>
+            <a class="btn btn-primary btn-lg" href="/jobs/new">LIST A JOB</a>
         </div>
     </header>
 
@@ -22,7 +22,7 @@
                 <h4 class="card-title"><strong><%=job.jobVenueName%></strong></h4>
                 <p class="card-text">is looking for a <strong><%= job.jobRole %></strong></p>    
                 <p>
-                    <a href="/jobs/<%= job._id %>" class="btn btn-outline-info">Learn More</a>
+                    <a href="/jobs/<%= job._id %>" class="btn btn-outline-info btn-sm">Learn More</a>
                 </p>
             </div>
         </div>
