--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -7,13 +7,13 @@
                     <h1 class="card-title">MEET <%=profile.name%></h1>
                     <h4 class="card-text"><%= profile.role %> @ <strong><%= profile.venue %></strong></h4>
                     <img class="card-img-top img-fluid" src="<%= profile.image %>">
-                    <p class="qoute">"<%= profile.greatestStory %>"</p>                
+                    <p class="qoute">" <%= profile.quote %> "</p>                
                     <div class="caption-full">
                             <strong><p>So tell us a little about yourself <%=profile.name%></p></strong>
                             <p><%= profile.description %></p>
-                            <strong><p>Tell us your greatest hospo story</p></strong>
-                            <p><%= profile.greatestStory %></p>
-                            <strong><p>Tell us your top 3 achievements you are most proud of</p></strong>
+                            <strong><p>Where did you cut your teeth and learn all your skills</p></strong>
+                            <p><%= profile.learnSkills %></p>
+                            <strong><p>What achievement are you are most proud of</p></strong>
                             <p><%= profile.achievements %></p>
                             <strong><p>What about the top 3 things you're passionate about</p></strong>
                             <p><%= profile.passionateAbout %></p>
