--- a/views/profiles/edit.ejs
+++ b/views/profiles/edit.ejs
@@ -56,8 +56,8 @@
                         <input class="form-control" type="text" name="profile[description]" value="<%= profile.description %>">
                     </div>
                     <div class="form-group">
-                        <label>Your greatest hospo story</label>
-                        <input class="form-control" type="text" name="profile[greatestStory]" value="<%= profile.greatestStory %>">
+                        <label>Where did you cut your teeth and what lessons did you learn?</label>
+                        <input class="form-control" type="text" name="profile[learnSkills]" value="<%= profile.learnSkills %>">
                     </div>
                     <div class="form-group">
                         <label>Your top 3 achievements</label>
