show page updates

--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -9,17 +9,17 @@
                     <img class="card-img-top img-fluid" src="<%= profile.image %>">
                     <p class="qoute">" <%= profile.quote %> "</p>                
                     <div class="caption-full">
-                            <strong><p>So tell us a little about yourself <%=profile.name%></p></strong>
+                            <strong><p>Here is a little into about <%=profile.name%></p></strong>
                             <p><%= profile.description %></p>
-                            <strong><p>Where did you cut your teeth and learn all your skills</p></strong>
+                            <strong><p>I cut my teeth and learnt all my skills by..</p></strong>
                             <p><%= profile.learnSkills %></p>
-                            <strong><p>What achievement are you are most proud of</p></strong>
+                            <strong><p>The achievement I'm most proud of is..</p></strong>
                             <p><%= profile.achievements %></p>
-                            <strong><p>What about the top 3 things you're passionate about</p></strong>
+                            <strong><p>I'm really passionate about</p></strong>
                             <p><%= profile.passionateAbout %></p>
-                            <strong><p>What is it you love about your industry and job?</p></strong>
+                            <strong><p>What I love about my industry is..</p></strong>
                             <p><%= profile.industryLove %></p>
-                            <strong><p>What is it you would like to improve in your industry?</p></strong>
+                            <strong><p>If i could change something about my industry it would be..</p></strong>
                             <p><%= profile.industryImprove %></p>
                             <p>
                                 <em>Submitted by <%= profile.author.username %></em>
