show page updates 2

--- a/views/profiles/show.ejs
+++ b/views/profiles/show.ejs
@@ -15,7 +15,7 @@
                             <p><%= profile.learnSkills %></p>
                             <strong><p>The achievement I'm most proud of is..</p></strong>
                             <p><%= profile.achievements %></p>
-                            <strong><p>I'm really passionate about</p></strong>
+                            <strong><p>I'm really passionate about..</p></strong>
                             <p><%= profile.passionateAbout %></p>
                             <strong><p>What I love about my industry is..</p></strong>
                             <p><%= profile.industryLove %></p>
