--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,12 +1,16 @@
-        <div class="footer-section">
-                <h4 id="mtp-h4">Follow MEETTHEPEOPLE</h4>
-                <ul>
-                    <li><a href="https://www.facebook.com/meetthepeople.co/"><i class="fa fa-facebook-square fa-2x social"></i> Facebook</a></li>
-                    <li><a href="https://www.instagram.com/meetthepeople.co/"><i class="fa fa-instagram fa-2x social"></i> Instagram</a></li>
-                    <li><a href="https://twitter.com/bl_waller/"><i id="social-tw" class="fa fa-twitter-square fa-2x social"></i> Twitter</a></li>
-                    <li><a href="mailto:brittanyleewaller@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-2x social"></i> Email Us</a></li>
-                </ul>
-        </div>
+        <footer>
+            <div class="container">
+                <div class="footer-section">
+                        <h4 id="mtp-h4">Follow MEETTHEPEOPLE</h4>
+                        <ul>
+                            <li><a href="https://www.facebook.com/meetthepeople.co/"><i class="fa fa-facebook-square fa-2x social"></i> Facebook</a></li>
+                            <li><a href="https://www.instagram.com/meetthepeople.co/"><i class="fa fa-instagram fa-2x social"></i> Instagram</a></li>
+                            <li><a href="https://twitter.com/bl_waller/"><i id="social-tw" class="fa fa-twitter-square fa-2x social"></i> Twitter</a></li>
+                            <li><a href="mailto:brittanyleewaller@gmail.com"><i id="social-em" class="fa fa-envelope-square fa-2x social"></i> Email Us</a></li>
+                        </ul>
+                </div>
+            </div>
+        </footer>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
 </body>
