--- a/views/profiles/edit.ejs
+++ b/views/profiles/edit.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-md-6 offset-md-3" style="text-align: center;" >
             <h1 id="mtp-h1">Edit your profile <%= profile.name %></h1>
-            <p>Keep your profile up to date legend</p>
+            <p>Keep your profile up to date with your best stories</p>
             <br>
         </div>
         <div class="col-md-6">
@@ -60,11 +60,11 @@
                         <input class="form-control" type="text" name="profile[learnSkills]" value="<%= profile.learnSkills %>">
                     </div>
                     <div class="form-group">
-                        <label>Your top 3 achievements</label>
+                        <label>What's your greatest achievement?</label>
                         <input class="form-control" type="text" name="profile[achievements]" value="<%= profile.achievements %>">
                     </div>
                     <div class="form-group">
-                        <label>The top 3 things you're passionate about</label>
+                        <label>What are you passionate about?</label>
                         <input class="form-control" type="text" name="profile[passionateAbout]" value="<%= profile.passionateAbout %>">
                     </div>
                     <div class="form-group">
@@ -72,7 +72,7 @@
                         <input class="form-control" type="text" name="profile[industryLove]" value="<%= profile.industryLove %>">
                     </div>
                     <div class="form-group">
-                        <label>What would you like to improve about your industry?</label>
+                        <label>If you could change something about your industry what would it be?</label>
                         <input class="form-control" type="text" name="profile[industryImprove]" value="<%= profile.industryImprove %>">
                     </div>
                     <div class="form-group">
