--- a/views/profiles/index.ejs
+++ b/views/profiles/index.ejs
@@ -15,22 +15,24 @@
       <h2>MEET OUR LATEST PROFILES</h2>
       <h5>Get to know some of the amazing people in our service industries who have shared their story</h5>
     </div>
-    
+
     <!-- PROFILE CARDS -->
-    <% profiles.forEach(function(profile){ %>
-        <div class="card-columns">
-            <div class="card">
-                    <img class="card-img-top img-fluid" src="<%= profile.image %>">
-                    <h4 class="card-title"><%=profile.name%></h4>
-                    <p class="card-text"><%= profile.role %> @ <strong><%= profile.venue %></strong></p>
-                    <p>
-                        <a href="/profiles/<%= profile._id %>" class="btn btn-outline-info">Meet Me</a>
-                    </p>
-            </div>
+    <section class="cards">
+        <% profiles.forEach(function(profile){ %>
+                <div class="card">
+                        <picture class="thumbnail">
+                            <img class="card-img-top img-fluid" src="<%= profile.image %>">
+                        </picture>
+                        <h4 class="card-title"><%=profile.name%></h4>
+                        <p class="card-text"><%= profile.role %> @ <strong><%= profile.venue %></strong></p>
+                        <p>
+                            <a href="/profiles/<%= profile._id %>" class="btn btn-outline-info">Meet Me</a>
+                        </p>
+                </div>
+        <% }); %>    
         </div>
-    <% }); %>    
-    </div>
-    
+    </section>
 </div>
 
+<br>
 <% include ../partials/footer %>
