--- a/views/profiles/new.ejs
+++ b/views/profiles/new.ejs
@@ -58,7 +58,7 @@
                 </div>
                 <div class="form-group">
                     <label>Where did you cut your teeth and what lessons did you learn?</label>
-                    <textarea class="form-control" rows="5" type="text" name="learnSkills" maxlength="1000" placeholder="Tell us a the juicy and interesting stories." required></textarea>
+                    <textarea class="form-control" rows="5" type="text" name="learnSkills" maxlength="1000" placeholder="Tell us the juicy and interesting stories." required></textarea>
                 </div>
                 <div class="form-group">
                     <label>What's your greatest achievement?</label>
@@ -75,6 +75,12 @@
                 <div class="form-group">
                     <label>If you could change something about your industry what would it be?</label>
                     <textarea class="form-control" rows="3" type="text" name="industryImprove" maxlength="1000" placeholder="Go on, we're all friends here" required></textarea>
+                </div>
+                <div class="form-group">
+                    <label>Tell us 3 businesses or establishments that you would recommend for a great experience</label>
+                    <p class="form-control">1. <input type="text" name="recommendsFirst" maxlength="100" required></p>
+                    <p class="form-control">2. <input type="text" name="recommendsSecond" maxlength="100" required></p>
+                    <p class="form-control">3. <input type="text" name="recommendsThird" maxlength="100" required></p>
                 </div>
                 <div class="form-group">
                     <button class="btn btn-lg btn-outline-primary btn-block">Submit</button>
