--- a/views/profiles/edit.ejs
+++ b/views/profiles/edit.ejs
@@ -76,6 +76,12 @@
                         <input class="form-control" type="text" name="profile[industryImprove]" value="<%= profile.industryImprove %>">
                     </div>
                     <div class="form-group">
+                        <label>Tell us 3 businesses or establishments that you would recommend for a great experience</label>
+                        <p class="form-control">1. <input type="text" name="profile[recommendsFirst]" value="<%= profile.recommendsFirst %>"></p>
+                        <p class="form-control">2. <input type="text" name="profile[recommendsSecond]" value="<%= profile.recommendsSecond %>"></p>
+                        <p class="form-control">3. <input type="text" name="profile[recommendsThird]" value="<%= profile.recommendsThird %>"></p>
+                    </div>
+                    <div class="form-group">
                         <button class="btn btn-lg btn-outline-primary btn-block">Submit</button>
                     </div>
                 </div>
