--- a/views/jobs/joblist.ejs
+++ b/views/jobs/joblist.ejs
@@ -15,32 +15,17 @@
       <h5>Find your next epic job at one these amazing employers below</h5>
     </div>
 
-    <!-- Listings -->
-    <!--<% jobs.forEach(function(job){ %>
-        <div class="card-columns">
-            <div class="card">
-                <h4 class="card-title"><strong><%=job.jobVenueName%></strong></h4>
-                <p class="card-text">is looking for a <strong><%= job.jobRole %></strong></p>    
-                <p>
-                    <a href="/jobs/<%= job._id %>" class="btn btn-outline-info btn-sm">Learn More</a>
-                </p>
-            </div>
-        </div>
-    <% }); %> -->
-    
     <table class="table table-hover">
             <tr class="active">
                 <th >Business Name</th>
-                <th> </th>
                 <th >Vacant Role</th>
                 <th> </th>
             </tr> 
         <% jobs.forEach(function(job){ %>
             <tr>
-                <th id="#mtp-h1"><%=job.jobVenueName%></th>
-                <th>is looking for a </th>
+                <th id="#mtp-h1"><strong><%=job.jobVenueName%></strong> is looking for a</th>
                 <th id="#mtp-h1"><strong><%= job.jobRole %></strong></th>
-                <th align="center"><a href="/jobs/<%= job._id %>" class="btn btn-outline-info">Learn More</a></th>
+                <th align="center"><a href="/jobs/<%= job._id %>" class="btn btn-outline-primary btn-sm">Learn More</a></th>
             </tr>    
         <% }); %> 
     </table>
